Added the latest version of the Application